Solving footer bug on small screens.

--- a/src/app.css
+++ b/src/app.css
@@ -221,11 +221,13 @@ footer {
   display: flex;
   align-items: center;
   justify-content: center;
+  position: absolute;
   bottom: 0;
   width: 600px;
   padding: 25px;
   gap: 25px;
   font-size: 14px;
+  background-color: var(--background);
   border-top: 1px solid rgb(208, 215, 222);
 }
 
